--- a/src/Client/wwwroot/index.html
+++ b/src/Client/wwwroot/index.html
@@ -37,7 +37,8 @@
 </head>
 
 <body>
-    <div id="app">
+    <a href="#maincontent" class="skip-link">Skip to main content</a>
+    <div id="app" role="application">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
             <circle r="40%" cx="50%" cy="50%" />
@@ -51,7 +52,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
-    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
+    <script src="_framework/blazor.webassembly#[.{fingerprint}].js" defer></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
     <!-- Bootstrap JavaScript -->
