--- a/src/Client/wwwroot/index.html
+++ b/src/Client/wwwroot/index.html
@@ -7,6 +7,17 @@
     <title>HL7ResultsGateway.Client</title>
     <base href="/" />
     <link rel="preload" id="webassembly" />
+    <!-- Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Font Awesome Free -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <!-- Google Fonts: Roboto, Inter, Roboto Slab -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Inter:wght@400;500;700&family=Roboto+Slab:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/app.css" />
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="HL7ResultsGateway.Client.styles.css" rel="stylesheet" /> -->
