feat(theming): implement theme management system with switcher component
- Added IThemeService and ThemeService for theme management.
- Created ThemeSwitcher component for user theme selection.
- Integrated theme persistence using localStorage.
- Updated CSS variables for light, dark, and medical themes.
- Enhanced components to support theme-aware styling.
- Implemented JavaScript interop for theme switching.

--- a/src/Client/wwwroot/index.html
+++ b/src/Client/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HL7ResultsGateway.Client</title>
     <base href="/" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preload" id="webassembly" />
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -41,6 +42,7 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
+    <script src="js/themes.js"></script>
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
     <script>navigator.serviceWorker.register('service-worker.js', { updateViaCache: 'none' });</script>
