--- a/src/Client/wwwroot/index.html
+++ b/src/Client/wwwroot/index.html
@@ -279,6 +279,30 @@
 
     <!-- Load JavaScript at end of body for optimal loading -->
     <script src="js/themes.js"></script>
+    <!-- Initialize theme immediately -->
+    <script>
+        if (window.initializeTheme) {
+            window.initializeTheme();
+        }
+
+        // Debug function to test theme switching in console
+        window.debugThemeSwitch = function () {
+            console.log('=== Theme Debug ===');
+            console.log('Current body classes:', document.body.className);
+            console.log('Stored theme:', localStorage.getItem('hl7Theme'));
+            console.log('Computed background-color:', getComputedStyle(document.body).backgroundColor);
+            console.log('CSS --background-color variable:', getComputedStyle(document.body).getPropertyValue('--background-color'));
+
+            // Test switching themes
+            console.log('Switching to dark...');
+            setTheme('dark');
+            setTimeout(() => {
+                console.log('After dark - body classes:', document.body.className);
+                console.log('After dark - background-color:', getComputedStyle(document.body).backgroundColor);
+                console.log('After dark - CSS variable:', getComputedStyle(document.body).getPropertyValue('--background-color'));
+            }, 100);
+        };
+    </script>
     <!-- Bootstrap JavaScript - defer for better performance -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
