feat: Implement HL7 Message Testing Component
- Added HL7MessageInputComponent for inputting and managing HL7 messages.
- Created HL7ProcessingResultComponent to display processing results and errors.
- Developed HL7MessageTestingPage to integrate input and results display.
- Introduced HL7ApiResponse and HL7ProcessingResult models for API interaction.
- Implemented IHL7MessageService for processing HL7 messages via API.
- Added TestMessageRepository for managing predefined HL7 test messages.
- Included JavaScript utilities for file download, clipboard operations, and toast notifications.
- Enhanced error handling and validation for HL7 message formats.

--- a/src/Client/wwwroot/index.html
+++ b/src/Client/wwwroot/index.html
@@ -279,6 +279,7 @@
 
     <!-- Load JavaScript at end of body for optimal loading -->
     <script src="js/themes.js"></script>
+    <script src="js/hl7-testing.js"></script>
     <!-- Initialize theme immediately -->
     <script>
         if (window.initializeTheme) {
