--- a/src/Client/wwwroot/index.html
+++ b/src/Client/wwwroot/index.html
@@ -7,7 +7,6 @@
     <title>HL7ResultsGateway.Client</title>
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="preload" id="webassembly" />
 
     <!-- Critical CSS - Inlined for optimal performance -->
     <style>
@@ -261,7 +260,6 @@
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
-    <script type="importmap"></script>
 </head>
 
 <body>
@@ -307,7 +305,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
-    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js', { updateViaCache: 'none' });</script>
 </body>
 
